fixed most wrap error while reducing window

--- a/P2_lannoy_thomas/style.css
+++ b/P2_lannoy_thomas/style.css
@@ -20,6 +20,9 @@ h1 {
   display: flex;
   align-items: center;
   gap: 50px;
+  flex-direction: row;
+  flex-wrap: wrap-reverse;
+  justify-content: right;
 }
 .navLink:hover {
   border: 2px;
@@ -94,6 +97,7 @@ h1 {
   display: flex;
   flex-direction: row;
   padding: 10px;
+  align-items: flex-start;
 }
 #searchBar {
   display: flex;
@@ -156,6 +160,7 @@ h1 {
   padding-top: 10px;
 }
 #lodgingTopTabContainer {
+  max-height: 880px;
   border-radius: 15px 15px 15px 15px;
   background-color: #f2f2f2;
   max-width: 420px;
@@ -163,17 +168,17 @@ h1 {
   padding-top: 10px;
 }
 #lodgingTab {
-  max-height: 880px;
   max-width: 1440px;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-wrap: wrap-reverse;
   justify-content: left;
   gap: 40px;
 }
 #filters {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: left;
   gap: 25px;
   max-width: 880px;
